--- a/src/style.scss
+++ b/src/style.scss
@@ -25,7 +25,7 @@ body {
   overflow: hidden;
 }
 
-#main {
+x-system {
   display: flex;
   flex-direction: column;
   background: linear-gradient(45deg, rgb(61, 125, 197), rgb(174, 190, 200));
