--- a/src/style.scss
+++ b/src/style.scss
@@ -5,6 +5,9 @@
   --white: rgba(255, 255, 255);
   --white50: rgba(255, 255, 255, 0.5);
   --white25: rgba(255, 255, 255, 0.25);
+  --gray: rgba(64, 64, 64);
+  --gray50: rgba(64, 64, 64, 0.5);
+  --gray25: rgba(64, 64, 64, 0.25);
 
   --base: var(--black);
   --base50: var(--black50);
@@ -23,134 +26,4 @@ body {
   padding: 0;
   margin: 0;
   overflow: hidden;
-}
-
-x-system {
-  display: flex;
-  flex-direction: column;
-  background: linear-gradient(45deg, rgb(61, 125, 197), rgb(174, 190, 200));
-}
-
-header {
-  height: 32px;
-  background: var(--base25);
-  padding: 0 1rem;
-  display: flex;
-  flex-direction: row;
-
-  div {
-    display: flex;
-    padding: 0.1rem 0.5rem;
-    color: var(--text);
-    cursor: pointer;
-
-    &:hover {
-      background: var(--main);
-    }
-  }
-}
-
-.svg-wrapper {
-  position: relative;
-  width: 100%;
-  padding-top: 100%;
-
-  svg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    path {
-      fill: var(--text);
-    }
-  }
-}
-
-article {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  height: calc(100vh - 32px);
-}
-
-section {
-  display: flex;
-  justify-content: center;
-}
-
-.dock {
-  display: flex;
-  background: var(--base25);
-  padding: 1rem 1rem 1.5rem;
-  border-radius: 8px 8px 0 0;
-  backdrop-filter: blur(50px);
-}
-
-.app {
-  display: flex;
-  position: relative;
-  width: 64px;
-  height: 64px;
-  margin-right: 1.5rem;
-  transition: 150ms ease;
-
-  &:last-child {
-    margin-right: 0;
-  }
-
-  &:hover {
-    width: 96px;
-    height: 96px;
-    margin-bottom: -32px;
-    transform: translateY(-32px);
-
-    .tooltip {
-      display: block;
-    }
-  }
-
-  &:active {
-    filter: brightness(0.8);
-  }
-
-  &.active::after {
-    content: '';
-    position: absolute;
-    left: calc((100% - 8px) / 2);
-    bottom: -16px;
-    display: block;
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background: var(--text);
-  }
-
-  img {
-    width: 100%;
-    height: auto;
-  }
-}
-
-.tooltip {
-  display: none;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, -150%);
-  background: var(--base50);
-  color: var(--text);
-  backdrop-filter: blur(50px);
-  border-radius: 4px;
-  padding: 0.25rem 1rem;
-  text-align: center;
-
-  &::before {
-    content: '';
-    position: absolute;
-    bottom: -16px;
-    right: calc((100% - 16px) / 2);
-    display: block;
-    border: 8px solid transparent;
-    border-top-color: var(--black50);
-  }
 }
